lesson-04/flask-application/flask-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: flask-daemonset
  namespace: flask-app
spec:
  selector:
    matchLabels:
      name: flask-ds-sidecar
  template:
    metadata:
      labels:
        name: flask-ds-sidecar
    spec:
      containers:
      - name: flask-ds-sidecar
        image: fluentd:latest
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: flask-varlog
          mountPath: /flask-data/var/log # this is the mount in the daemon set pod
      terminationGracePeriodSeconds: 30
      volumes:
      - name: flask-varlog
        persistentVolumeClaim:
            claimName: flask-pvc
