lesson-04/flask-application/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      imagePullSecrets:
        - name: lesson4-secret
      containers:
      - name: flask-app
        image: public.ecr.aws/q2y0f5j6/cloudexperts/flask-app:1.0
        imagePullPolicy: Always
        # ForPRIVATE , USe
        #image: 148761662110.dkr.ecr.us-east-1.amazonaws.com/cloudexperts/falsk-app
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
