lesson-04/flask-application/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask-app
  annotations:
    # the rewrite-target annotation is overriding everything that is paced ib the api call after / to "/"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: flask.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 80 # flask service port is 80 and target port us 5000

# When you apply this yaml, an ingress resource will be created managed by the ingress-nginx instance.
# Nginx is configured to automatically discover all ingress with the kubernetes.io/ingress.class: "nginx" annotation
# or where ingressClassName: nginx is present.
# Please note that the ingress resource should be placed inside the same namespace of the backend resource.
